syntax = "proto3";

package swift.common;



// 通用响应
message CommonResponse {
    int32 code = 1;           // 状态码：0=成功
    string message = 2;       // 错误信息
}

// 分页请求
message PageRequest {
    int32 page = 1;
    int32 page_size = 2;
    string cursor = 3;        // 游标分页
}

// 分页响应
message PageResponse {
    int32 total = 1;
    bool has_more = 2;
    string next_cursor = 3;
}

// 时间戳
message Timestamp {
    int64 seconds = 1;
    int32 nanos = 2;
}
